# digital-signature-service

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py  routes_cache.py  routes_rabbitmq.py  routes_sign.py  schemas.py
backend/app/core/: config.py
backend/app/models/: document.py
backend/app/services/: database.py  rabbitmq.py  redis.py
backend/tests/: conftest.py  test_api_router_integration.py  test_main.py  test_routes_cache.py  test_routes_rabbitmq.py  test_routes_sign.py
backend/tests/fakes/: fake_redis.py
frontend/: .dockerignore  Dockerfile  index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
scripts/: run-all.sh  run-backend.sh  run-frontend.sh  run.sh
