[project]
name = "digital-signature-service"
version = "0.1.0"
description = "Toy digital signature service imitation built with FastAPI"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "black>=25.11.0",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
